Revision history for tesla-charge

1.02 UNREL
    - We now use WiFiManager; if we can't connect to a known wireless network,
      we'll start the controllers in AP mode ('TeslaInterface' and
      'TeslaController') so that a new wifi config can be uploaded
    - Added SSL support
    - Backend API URL is now configured through the WiFi configuration captive
      portal. ie, it's no longer hard-coded

1.01 2022-04-08
    - Separated code into two separate controllers (Controller - controls the
      LED strip, Interface - does everything else) which communicate via
      ESP-NOW protocol

1.00 2022-04-01
    - Removed reliance on Tim Dorssers TeslaPy Python distribution thanks to
      my new Tesla::Vehicle and Tesla::API distributions
    - Renamed web.pl to app.psgi
    - Removed script_path directive from config file